--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "lib": "lib"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "ejs": "^3.1.2",
+    "express": "^4.17.1",
     "pm2": "^4.3.1",
     "sanitize-html": "^1.23.0"
   },
