--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "body-parser": "^1.19.0",
     "ejs": "^3.1.2",
     "express": "^4.17.1",
+    "mongoose": "^5.9.10",
+    "mysql": "^2.18.1",
     "pm2": "^4.3.1",
     "sanitize-html": "^1.23.0"
   },
