--- a/package.json
+++ b/package.json
@@ -15,7 +15,12 @@
     "pm2": "^4.3.1",
     "sanitize-html": "^1.23.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "connect-flash": "^0.1.1",
+    "express-session": "^1.17.1",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
